--- a/templates/about.html
+++ b/templates/about.html
@@ -88,6 +88,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width">
         <meta charset="utf-8">
@@ -96,9 +97,14 @@
 
         <script src="http://cdn.pydata.org/bokeh/release/bokeh-2.0.2.min.js"></script>
         <script src="http://cdn.pydata.org/bokeh/release/bokeh-widgets-2.0.2.min.js"></script>
+        <script src="https://gmousse.github.io/dataframe-js/dist/dataframe.min.js"></script>
+        <script>
+          import DataFrame from 'dataframe-js';
+        </script>
         <title>Bokeh Scatter Plots</title>
     </head>
     <body>
+      
         <div> 
           {{ div | safe}}
           <script>{{script|safe}}</script>
