--- a/templates/scatterplot.html
+++ b/templates/scatterplot.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "vis.html"%}
 
 <html>
     <title>DBL about</title>
@@ -84,6 +84,61 @@
   
     -->
   {% block content %}
+
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta name="viewport" content="width=device-width">
+        <meta charset="utf-8">
+        <link href="http://cdn.pydata.org/bokeh/release/bokeh-2.0.2.min.css" rel='stylesheet' type="text/css">
+        <link href="http://cdn.pydata.org/bokeh/release/bokeh-widgets-2.0.2.min.css" rel='stylesheet' type="text/css">
+
+        <script src="http://cdn.pydata.org/bokeh/release/bokeh-2.0.2.min.js"></script>
+        <script src="http://cdn.pydata.org/bokeh/release/bokeh-widgets-2.0.2.min.js"></script>
+        <!--
+        <script src="https://gmousse.github.io/dataframe-js/dist/dataframe.min.js"></script>
+        
+        <script>
+          import DataFrame from 'dataframe-js';
+        </script> -->
+        Bokeh Scatter Plots</title>
+    </head>
+    <body>
+      <div class="chart"> 
+        {{ div | safe}}
+        <script>{{script|safe}}</script>
+        <style>
+          .chart{
+              display: block;
+              margin-left: 30%;
+              margin-right: 300px;
+              margin-top: 5%;
+              text-align: center;
+              position: absolute;
+          }
+          </style>
+      </div>
+      <div> 
+        <form action="#" method="POST" enctype="multipart/form-data">
+            <input type="file" name="FileSelect" id="FileSelect" >
+            <button type="submit">Choose File(s)</button>
+            <span ></span>
+        </form>
+      </div>
+      <div> 
+        {{ div | safe}}
+        <script>{{script|safe}}</script>
+      </div>
+    </body>
+</html>
+
+ <!-- <h1 style="padding-top: 10%;"> Scatterplots </h1>
+  <p>A scatterplot is a type of data display that shows the relationship between two numerical variables. 
+     Each member of the dataset gets plotted as a point whose (x, y)(x,y)left parenthesis, x, comma, y, 
+     right parenthesis coordinates relates to its values for the two variables.</p>-->
+  
   {% endblock content %}
 
       
