Not finished yet but close, just a few bugs to fix

--- a/templates/about.html
+++ b/templates/about.html
@@ -89,6 +89,7 @@
 <html lang="en">
     <head>
 
+
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width">
         <meta charset="utf-8">
@@ -97,20 +98,25 @@
 
         <script src="http://cdn.pydata.org/bokeh/release/bokeh-2.0.2.min.js"></script>
         <script src="http://cdn.pydata.org/bokeh/release/bokeh-widgets-2.0.2.min.js"></script>
-        <!--
-        <script src="https://gmousse.github.io/dataframe-js/dist/dataframe.min.js"></script>
-        
-        <script>
-          import DataFrame from 'dataframe-js';
-        </script> -->
-        Bokeh Scatter Plots</title>
+
+        <title>Bokeh Scatter Plots</title>
     </head>
     <body>
         </div>
         <div> 
           <form action="#" method="POST" enctype="multipart/form-data">
-              <input type="file" name="FileSelect" id="FileSelect" >
-              <button type="submit">Choose File(s)</button>
+              <input type="file" name="FileSelect" id="FileSelect" value="All_fixation_data_cleaned_up">
+              <select name="user_select" multiple>
+                {% for u in userdata %}
+                  <option value="{{ u.name }}">{{ u.name }}</option>
+                {% endfor %}
+              </select>
+              <select name="stimuli_select">
+                {% for s in stimulidata %}
+                  <option value="{{ s.name }}">{{ s.name }}</option>
+                {% endfor %}
+              </select>
+              <button type="submit">Select</button>
               <span ></span>
           </form>
       </div>
