--- a/templates/about.html
+++ b/templates/about.html
@@ -108,12 +108,20 @@
               <input type="file" name="FileSelect" id="FileSelect" value="All_fixation_data_cleaned_up">
               <select name="user_select" multiple>
                 {% for u in userdata %}
-                  <option value="{{ u.name }}">{{ u.name }}</option>
+                    {% if u.name in activeusersdata %}
+                      <option value="{{ u.name }}" selected>{{ u.name }}</option>
+                    {% else %}
+                      <option value="{{ u.name }}">{{ u.name }}</option>
+                    {% endif %}
                 {% endfor %}
               </select>
               <select name="stimuli_select">
                 {% for s in stimulidata %}
-                  <option value="{{ s.name }}">{{ s.name }}</option>
+                  {% if s.name in activestimulidata %}
+                    <option value="{{ s.name }}" selected>{{ s.name }}</option>
+                  {% else %}
+                    <option value="{{ s.name }}">{{ s.name }}</option>
+                  {% endif %}
                 {% endfor %}
               </select>
               <button type="submit">Select</button>
