--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,15 +1,15 @@
 .center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-  }
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
 
-  body {
-    color: black;
-    background-color: #b4d7c0;
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-    background-image: linear-gradient(to bottom, #33ccff 0%, #0082ad 100%);
-  }
+body {
+  color: #d8c4bd;
+  background-color: #3d3d3d;
+  padding: 0;
+  height: 100vh;
+  /*background: url('file:///C:/Users/20190965/Desktop/6_18/dblgroup46/templates/background_texture.jpeg');
+  background-image: linear-gradient(to top, #3d3d3d , #2e2e2e );*/
+}
