--- a/static/css/navbar2.css
+++ b/static/css/navbar2.css
@@ -1,19 +1,24 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-  }
+}
   
 .navbar {
     overflow: hidden;
-    background-color: #333;
+    background-color: #3d3d3d;
+    background-image: linear-gradient(to right, #3b3b3b , #272727 );
+    transition: 0.4s;
 }
 
 .navbar a {
     float: left;
+    font-weight: 200;
     font-size: 16px;
-    color: white;
+    color: #d8c4bd;
     text-align: center;
-    padding: 14px 16px;
+    padding: 18px 18px;
     text-decoration: none;
+    transition: 0.4s;
+    background-color: rgba(255, 255, 255, 0);
 }
   
 .dropdown {
@@ -22,24 +27,30 @@ body {
 }
   
 .dropdown .dropbtn {
-    font-size: 16px;  
+    font-size: 16px;
+    font-weight: 200;  
     border: none;
     outline: none;
-    color: white;
-    padding: 14px 16px;
-    background-color: inherit;
+    color: #d8c4bd;
+    padding: 18px 18px;
+    background-color: rgba(255, 255, 255, 0);
     font-family: inherit;
     margin: 0;
+    transition: 0.4s;
 }
   
 .navbar a:hover, .dropdown:hover .dropbtn {
-    background-color: red;
+    background-color: rgba(255, 255, 255, 0.253);    
 }
   
+.navbar:hover {
+    padding: 10px 10px;
+}
+
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: #3d3d3d;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -47,15 +58,19 @@ body {
   
 .dropdown-content a {
     float: none;
-    color: black;
+    color: #d8c4bd;
+    font-weight: 200;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
     text-align: left;
+    background-color: rgba(255, 255, 255, 0);
+    transition: 0.4s;
+
 }
   
 .dropdown-content a:hover {
-    background-color: #ddd;
+    background-color: rgba(255, 255, 255, 0.253);
 }
   
 .dropdown:hover .dropdown-content {
@@ -64,7 +79,22 @@ body {
 
 
 .navbar-nav-upload {
-    float: center
+    float: right;
 }
+
+.navbar-logo {
+    position: absolute;
+    border-radius: 5px;
+    left: 43.5%;
+    float: right;
+    border-style: outset;    
+    margin-top: 12px;
+}
+
+.homepage-logo {
+    position: absolute;
+    border-radius: 50%;
+}
+
 
 
