--- a/templates/vis.html
+++ b/templates/vis.html
@@ -1,6 +1,8 @@
-<html>
+{% extends "base.html" %}
 
-    <title>DBL vis</title>
+{% block title %} DBL Vis {% endblock title %}
+
+<html>
 
     <style>
         img {
@@ -11,7 +13,7 @@
         }
         </style>
 
-    <img src="static/images/demoplot.jpeg", style="width:50%;">
+    <img src="static/images/plots/demoplot.jpeg", style="width:50%;">
 
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -28,7 +30,7 @@
         <ul class="navbar-nav">
             <li class="logo">
             <a href="#" class="nav-link">
-                <span class="link-text logo-text">Menu</span>
+                <span class="link-text logo-text", style="font-weight: bold;">PLOTS </span>
                 <svg
                 aria-hidden="true"
                 focusable="false"
@@ -43,12 +45,12 @@
                     <path
                     fill="currentColor"
                     d="M224 273L88.37 409a23.78 23.78 0 0 1-33.8 0L32 386.36a23.94 23.94 0 0 1 0-33.89l96.13-96.37L32 159.73a23.94 23.94 0 0 1 0-33.89l22.44-22.79a23.78 23.78 0 0 1 33.8 0L223.88 239a23.94 23.94 0 0 1 .1 34z"
-                    class="fa-secondary"
+                    class="fa-3"
                     ></path>
                     <path
                     fill="currentColor"
                     d="M415.89 273L280.34 409a23.77 23.77 0 0 1-33.79 0L224 386.26a23.94 23.94 0 0 1 0-33.89L320.11 256l-96-96.47a23.94 23.94 0 0 1 0-33.89l22.52-22.59a23.77 23.77 0 0 1 33.79 0L416 239a24 24 0 0 1-.11 34z"
-                    class="fa-primary"
+                    class="fa-3"
                     ></path>
                 </g>
                 </svg>
@@ -77,7 +79,7 @@
                        14.33 32 32 32h464c8.84 0 16-7.16 16-16v-16c0-8.84-7.16-16-16-16zm-387.2-48h22.4c6.4 0
                        12.8-6.4 12.8-12.8v-70.4c0-6.4-6.4-12.8-12.8-12.8h-22.4c-6.4 0-12.8 6.4-12.8 12.8v70.4c0 6.4 6.4 12.8 12.8 12.8z"
 
-                    class="fa-primary"
+                    class="fa-3"
                     ></path>
 
                     <path
@@ -87,7 +89,7 @@
 
                 </g>
                 </svg>
-                <span class="link-text">Bar Chart</span>
+                <span class="link-text">BAR CHART</span>
             </a>
             </li>
 
@@ -115,24 +117,24 @@
                         fill="currentColor"
                         d="M91.8,88.7H15.8c-2.4,0-4.4-2-4.4-4.4V8.2C11.3,6.4,9.9,5,8.2,5S5,6.4,5,8.2v76.1C5,90.2,9.8,95,15.8,95h76.1
                            c1.8,0,3.2-1.4,3.2-3.2S93.6,88.7,91.8,88.7z"
-                        class="fa-primary"
+                        class="fa-3"
                         ></path>
                         <path
                         fill="currentColor"
                         d="M91.8,88.7H15.8c-2.4,0-4.4-2-4.4-4.4V8.2C11.3,6.4,9.9,5,8.2,5S5,6.4,5,8.2v76.1C5,90.2,9.8,95,15.8,95h76.1
                            c1.8,0,3.2-1.4,3.2-3.2S93.6,88.7,91.8,88.7z"
-                        class="fa-primary"
+                        class="fa-3"
                         ></path>
-                        <circle cx="28.7" cy="69" r="5.4" fill="currentColor" class="fa-secondary"/>
-                        <circle cx="48.5" cy="40.1" r="5.4" fill="currentColor" class="fa-secondary"/>
-                        <circle cx="55.4" cy="61.4" r="5.4" fill="currentColor" class="fa-secondary"/>
-                        <circle cx="70.6" cy="43.9" r="5.4" fill="currentColor" class="fa-secondary"/>
-                        <circle cx="78.9" cy="23.4" r="5.4" fill="currentColor" class="fa-secondary"/>
+                        <circle cx="28.7" cy="69" r="5.4" fill="currentColor" class="fa-3"/>
+                        <circle cx="48.5" cy="40.1" r="5.4" fill="currentColor" class="fa-3"/>
+                        <circle cx="55.4" cy="61.4" r="5.4" fill="currentColor" class="fa-3"/>
+                        <circle cx="70.6" cy="43.9" r="5.4" fill="currentColor" class="fa-3"/>
+                        <circle cx="78.9" cy="23.4" r="5.4" fill="currentColor" class="fa-3"/>
 
                     </g>
 
                 </svg>
-                <span class="link-text">Scatter Plot</span>
+                <span class="link-text">SCATTER PLOT</span>
             </a>
             </li>
 
@@ -172,7 +174,7 @@
                         -16 c0 -13 3 -40 6 -61 l7 -38 -69 3 -69 3 -3 49 c-4 59 4 66 76 66 47 0 52
                         -2 52 -22z m-320 -127 c0 -10 3 -33 6 -50 l7 -31 -76 0 c-101 0 -107 3 -107
                         56 l0 44 85 0 c76 0 85 -2 85 -19z"
-                        class="fa-primary"
+                        class="fa-3"
                         ></path>
                         <path
                         fill="currentColor"
@@ -195,11 +197,11 @@
                         -16 c0 -13 3 -40 6 -61 l7 -38 -69 3 -69 3 -3 49 c-4 59 4 66 76 66 47 0 52
                         -2 52 -22z m-320 -127 c0 -10 3 -33 6 -50 l7 -31 -76 0 c-101 0 -107 3 -107
                         56 l0 44 85 0 c76 0 85 -2 85 -19z"
-                        class="fa-primary"
+                        class="fa-3"
                         ></path>
                     </g>
                     </svg>
-                    <span class="link-text">Heat Map</span>
+                    <span class="link-text">HEAT MAP</span>
                 </a>
                 </li>
 
@@ -221,16 +223,16 @@
                     <path
                     fill="currentColor"
                     d="M501.70312,224H448V160H368V96h48V66.67383A246.86934,246.86934,0,0,0,256,8C119.03125,8,8,119.0332,8,256a250.017,250.017,0,0,0,1.72656,28.26562C81.19531,306.76953,165.47656,320,256,320s174.80469-13.23047,246.27344-35.73438A250.017,250.017,0,0,0,504,256,248.44936,248.44936,0,0,0,501.70312,224ZM192,240a80,80,0,1,1,80-80A80.00021,80.00021,0,0,1,192,240ZM384,343.13867A940.33806,940.33806,0,0,1,256,352c-87.34375,0-168.71094-11.46094-239.28906-31.73633C45.05859,426.01953,141.29688,504,256,504a247.45808,247.45808,0,0,0,192-91.0918V384H384Z"
-                    class="fa-secondary"
+                    class="fa-3"
                     ></path>
                     <path
                     fill="currentColor"
                     d="M256,320c-90.52344,0-174.80469-13.23047-246.27344-35.73438a246.11376,246.11376,0,0,0,6.98438,35.998C87.28906,340.53906,168.65625,352,256,352s168.71094-11.46094,239.28906-31.73633a246.11376,246.11376,0,0,0,6.98438-35.998C430.80469,306.76953,346.52344,320,256,320Zm-64-80a80,80,0,1,0-80-80A80.00021,80.00021,0,0,0,192,240Zm0-104a24,24,0,1,1-24,24A23.99993,23.99993,0,0,1,192,136Z"
-                    class="fa-primary"
+                    class="fa-3"
                     ></path>
                 </g>
                 </svg>
-                <span class="link-text">Radial Tree Map</span>
+                <span class="link-text">RADIAL TREE MAP</span>
             </a>
             </li>
 
@@ -251,16 +253,16 @@
                     <path
                     fill="currentColor"
                     d="M32 416c0 35.35 21.49 64 48 64h16V352H32zm154.54-232h280.13L376 168C243 140.59 222.45 51.22 128 34.65V160h18.34a45.62 45.62 0 0 1 40.2 24zM32 96v64h64V32H80c-26.51 0-48 28.65-48 64zm114.34 256H128v125.35C222.45 460.78 243 371.41 376 344l90.67-16H186.54a45.62 45.62 0 0 1-40.2 24z"
-                    class="fa-secondary"
+                    class="fa-3"
                     ></path>
                     <path
                     fill="currentColor"
                     d="M592.6 208.24C559.73 192.84 515.78 184 472 184H186.54a45.62 45.62 0 0 0-40.2-24H32c-23.2 0-32 10-32 24v144c0 14 8.82 24 32 24h114.34a45.62 45.62 0 0 0 40.2-24H472c43.78 0 87.73-8.84 120.6-24.24C622.28 289.84 640 272 640 256s-17.72-33.84-47.4-47.76zM488 296a8 8 0 0 1-8-8v-64a8 8 0 0 1 8-8c31.91 0 31.94 80 0 80z"
-                    class="fa-primary"
+                    class="fa-3"
                     ></path>
                 </g>
                 </svg>
-                <span class="link-text">Home</span>
+                <span class="link-text">HOME </span>
             </a>
             </li>
 
@@ -268,7 +270,6 @@
 
         </ul>
         </nav>
-        <div>{{div|safe}}</div>
-        <script>{{ script|safe }}</script>
+        <!-- End of Sidebar -->
     </body>
 </html>
