--- a/templates/about.html
+++ b/templates/about.html
@@ -1,91 +1,113 @@
 {% extends "base.html" %}
+{% block homepagelogo %}
+<hmtl>
 
-<html>
-    <title>DBL about</title>
 
-    <!--
-    <div class="file-upload">
-        <input class="file-upload__input" type="file" name="myFile[]" id="myFile" multiple>
-        <button class="file-upload__button" type="button">Choose File(s)</button>
-        <span class="file-upload__label"></span>
-    </div>
+    {% block navbar_home_button %}
+    {% endblock navbar_home_button %}
 
-    <style>
-    .file-upload {
-        display: inline-flex;
-        align-items: center;
-        font-size: 15px;
-      }
+
+    <title>DBL home</title>
+
+    <head>
+      <link rel="stylesheet" href="/static/css/navbar2.css">
+    </head>
+    <body>
+
       
-      .file-upload__input {
-        display: none;
-      }
-      
-      .file-upload__button {
-        -webkit-appearance: none;
-        background: #009879;
-        border: 2px solid #00745d;
-        border-radius: 4px;
-        outline: none;
-        padding: 0.5em 0.8em;
-        margin-right: 15px;
-        color: #ffffff;
-        font-size: 1em;
-        font-family: "Quicksand", sans-serif;
-        font-weight: bold;
-        cursor: pointer;
-      }
-      
-      .file-upload__button:active {
-        background: #00745d;
-      }
-      
-      .file-upload__label {
-        max-width: 250px;
-        font-size: 0.95em;
-        text-overflow: ellipsis;
-        overflow: hidden;
-        white-space: nowrap;
-        font-family: "Quicksand", sans-serif;
-      }
-    </style>
+          <div class="w3-container" style="text-align: center; background-color: #555555; border-radius: 5px;">
+          <h1 style="font-family:Verdana, Geneva, Tahoma, sans-serif; font-variant: small-caps; font-size: 100px;">About</h1>
+          </div>
 
-    <script>
-        Array.prototype.forEach.call(
-  document.querySelectorAll(".file-upload__button"),
-  function(button) {
-    const hiddenInput = button.parentElement.querySelector(
-      ".file-upload__input"
-    );
-    const label = button.parentElement.querySelector(".file-upload__label");
-    const defaultLabelText = "No file(s) selected";
+          <div class="w3-container" style=" width: 100%; margin: 0; left: 0;  background-color: #3d3d3d; padding-top: 10px;">
+            <hr>
+            <div class="selfie-container">
+            
+            
+            <p><img src="/static/Selfies/Website_Louise.jpeg" class="selfie-L" alt="Louise" style="height: 95%; margin-left: auto; border-radius: 10px; float: left;">
+            <h1 style="font-family:Verdana, Geneva, Tahoma, sans-serif; font-size: 70px;">Louise</h1>
+            <p style="width: 60%; margin-left: 30%; font-size: large;">Greetings, my name is Louise de Laat, I'm a second-year Industrial Design student at the TU/e. During this project, I was the scrum master. As a scrum master, I resolve impediments and had control over the scrum processes. My main job is to make sure that the project is working smoothly and every team member has tools to get their work done efficiently. My focus is on making sure that deliverables are done on time and the production quality is reached. Apart from this, I was mainly busy with one of the interactive visualizations, aka the Bar Chart.  Finally, I had a great time being a part of this project and joyful team.</p>           
+            </p>
+            
+          </div>
+          <hr>
+        </div>
+          <div class="w3-container" style="padding: 10px 10px; width: 100%; margin:0 ; left: 0; background-color: #3d3d3d;">
+          <div class="selfie-container">
+            
+            <p class="about-description"><img src="/static/Selfies/Website_Daan.jpeg" class="selfie-L" alt="Daan" style="height: 95%; margin-right: auto; border-radius: 10px; float: right;">
+            <h1 style="font-family:Verdana, Geneva, Tahoma, sans-serif; font-size: 70px;">Daan</h1>
+            <p style="width: 60%; margin-left: 12%; font-size: large;">Hello my name is Daan Verkade, and I'm a first year BCS student at the Tu/e. During this project, I've worked on making the Scatterplot and Gaze-stripe plot. Furthermore, I've also worked on making sure the updating functions works for each visualisation (except for the heatmap) and made it possible for users to analyse their own datasets. I also tried to help out my fellow group members as much as possible during this project as I already had some experience in programming websites, even though working with Python was definitely something I didn't have a lot of experience with. During this course I learned so much on how to work with Python and the Bokeh library and definitely developed some skill in developing visualisations for websites. </p>           
+            </p>
+            
+            
+            
+            
+          </div>
 
-    // Set default text for label
-    label.textContent = defaultLabelText;
-    label.title = defaultLabelText;
+          <hr>
+        </div>
 
-    button.addEventListener("click", function() {
-      hiddenInput.click();
-    });
+        <div class="w3-container" style=" width: 100%; margin: 0; left: 0;  background-color: #3d3d3d; padding-top: 10px;">
+          <div class="selfie-container">
+            
+            
+            <p><img src="/static/Selfies/Website_Yash.jpeg" class="selfie-L" alt="Louise" style="height: 90%; margin-left: auto; border-radius: 10px; float: left;">
+            <h1 style="font-family:Verdana, Geneva, Tahoma, sans-serif; font-size: 70px;">Yash</h1>
+            <p style="width: 60%; margin-left: 30%; font-size: large;">Greetings everybody, my name is Yash C. Israni, and I'm a first-year computer science student. During this project, I worked on the web-based tool with my fellow teammates Stijn and Alex. We set a bunch of goals for ourselves during this project, which I, personally, believe to have had accomplished. While working on this course, I learned to work with a team, how to present in a meeting, how to use git and most importantly, I learned the importance of commenting your code. The work I have done on this project varied from start to finish, but in short, I helped everyone in any way I could. In this way, I like to think that we were able to have lots of bonding in the team. I am very glad to have been part of this amazing team and had loads of fun! </p>           
+            </p>
+            
+          </div>
+          <hr>
+        </div>
+          <div class="w3-container" style="padding: 10px 10px; width: 100%; margin:0 ; left: 0; background-color: #3d3d3d;">
+          <div class="selfie-container">
+            
+            <p class="about-description"><img src="/static/Selfies/Website_Tomas.jpeg" class="selfie-L" alt="Daan" style="height: 95%; margin-right: auto; border-radius: 10px; float: right;">
+            <h1 style="font-family:Verdana, Geneva, Tahoma, sans-serif; font-size: 70px;">Tomas</h1>
+            <p style="width: 60%; margin-left: 12%; font-size: large;">Hi, my name is Tomas van Spijk. As a first year Computer Science & Engineering student at the TU/e I worked on this webtool. I am part of the visualization team and my task was to create the Heatmap that can be seen and used on the website. Before the project started I set goals for myself to achieve during the course. One of the main goals for me was to improve my programming skills. When reviewing the project I can definitely conclude that these skills have improved drastically during the course. By learning a new language in the form of python and using a variety of libraries I gathered a lot of new knowledge and skills. Another important part to the project was the teamwork. I must count myself very lucky for being in this awesome team. I can say that everyone contributed a lot and the teamwork was great. It was an overall great experience and I had loads of fun with the team. I hope you enjoy our website! </p>          
+            </p>
+            
+            
+            
+            
+          </div>
 
-    hiddenInput.addEventListener("change", function() {
-      const filenameList = Array.prototype.map.call(hiddenInput.files, function(
-        file
-      ) {
-        return file.name;
-      });
+          <hr>
+        </div>
 
-      label.textContent = filenameList.join(", ") || defaultLabelText;
-      label.title = label.textContent;
-    });
-  }
-);
-    </script>
+        <div class="w3-container" style=" width: 100%; margin: 0; left: 0;  background-color: #3d3d3d; padding-top: 10px;">
+          <div class="selfie-container">
+            
+            
+            <p class="about-description"><img src="/static/Selfies/Website_Alex.jpeg" class="selfie-L" alt="Louise" style="height: 90%; margin-left: auto; border-radius: 10px; float: left;">
+            <h1 style="font-family:Verdana, Geneva, Tahoma, sans-serif; font-size: 70px;">Alex</h1>
+            <p style="width: 60%; margin-left: 30%; font-size: large;">Hello there, my name is Alexandru Rosca and I’m a first year Computer Science & Engineering student at the TU/e. Stijn and I worked on the front-end of the web tool. My job was to design the layout and the homepage. The navigation bars are also the product of my hard work, so I do hope you like them. I’m known in the group as the 4am, coffee fueled programmer, since that’s the time where I feel most productive. I had a lot of gun being part of the Devisuals group and I do hope you enjoy the web tool we created. </p>         
+            </p>
+            
+          </div>
+          <hr>
+        </div>
+          <div class="w3-container" style="padding: 10px 10px; width: 100%; margin:0 ; left: 0; background-color: #3d3d3d;">
+          <div class="selfie-container">
+            
+            <p class="about-description"><img src="/static/Selfies/Website_Stijn.jpeg" class="selfie-L" alt="Daan" style="height: 95%; margin-right: auto; border-radius: 10px; float: right;">
+            <h1 style="font-family:Verdana, Geneva, Tahoma, sans-serif; font-size: 70px;">Stijn</h1>
+            <p style="width: 60%; margin-left: 10%; font-size: large;">Hi, my name is Stijn van Doornum, and I’m a first year Computer Science and Engineering student at the TU/e. I’m the last member to join Devisuals, since there were some problems with my old group. Together with Alex, I mainly worked on the front-end of the webtool. Some of my activities were designing the logos, putting together a color palette and designing the about page. I had a lot of fun in this course, learned a lot of skills; I improved my python knowledge, learned how to use flask and github, and I improved communicatively and learned the SCRUM-method. I also got to know some very nice people, had a lot of fun interactions and nice sessions with the group. I had a great experience overall. </p>          
+            </p>
+            
+            
+            
+            
+          </div>
+
+          <hr>
+        </div>
+
+</body>
+
   
-    -->
-  {% block content %}
-  {% endblock content %}
+</hmtl>
+{% endblock homepagelogo %} 
 
-      
-    
-</html>
+
