--- a/templates/bar.html
+++ b/templates/bar.html
@@ -1,10 +1,27 @@
-{% extends "vis.html" %}
-{% block content %}
+{% extends "base.html" %}
+{% block homepagelogo %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <script src="http://cdn.pydata.org/bokeh/release/bokeh-2.0.2.min.js"></script>
+        <script src="http://cdn.pydata.org/bokeh/release/bokeh-widgets-2.0.2.min.js"></script>
     </head>
     <body>
+        <div class="chart"> 
+            {{ div | safe}}
+            <script>{{script|safe}}</script>
+            <style>
+                .chart{
+                    display: block;
+                    margin-left: 15%;
+                    margin-right: 300px;
+                    margin-top: 5%;
+                    text-align: center;
+                    position: absolute;
+                }
+      
+            </style>
+        </div>
     </body>
 </html>
-{% endblock content %}
+{% endblock homepagelogo %}
