--- a/templates/base.html
+++ b/templates/base.html
@@ -1,97 +1,58 @@
 <html>
 
-    <title> {% block page_title %}{% endblock %} </title>
+    <title> {% block page_title %}{% endblock page_title %} </title>
     <head>
-        <!-- Required meta tags 
-     <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> 
-
-         Bootstrap CSS 
-       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/navbar.css') }}">
--->
         <link href="static/css/base.css" rel="stylesheet", type="text/css">
-
-        <script type="text/javascript" src="js/bootstrap-filestyle.min.js"> </script>
     </head>
 
-    <header class="site-header">
-        <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
-        <div class="container">
-            <div class="collapse navbar-collapse" id="navbarToggle">
-            <div class="navbar-nav mr-auto">
-                <a href="/home">Home</a>
-                <a href="/about">About</a>
-                <a href="/bar">Visualizations</a>         
-            </div>
-            </div>
-        </div>
-    <!--
-    {% block navbar %}
-    <header class="site-header">
-        <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
-        <div class="container">
-            <a class="navbar-brand mr-4" href="/">Mr. L'Baguette :))</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarToggle">
-            <div class="navbar-nav mr-auto">
-                {% block navbar_home_button %}
-                <a class="nav-item nav-link" href="/">Home</a>
-                {% endblock navbar_home_button %}
-                <a class="nav-item nav-link" href="/vis">Visualisations</a>
-                <a class="nav-item nav-link" href="/about">About</a>
-            </div>
-
-             Navbar Right Side  
-            <div class="navbar-nav">               
-                <a class="nav-item nav-link" href="/register">Login</a>
-                <a class="nav-item nav-link" href="/register">Register</a>
-            </div>
-
-
-            </div>
-        </div>
-        </nav>
     
-    {% endblock navbar %}
-    -->
-    </header>
-
 
     <body>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">  
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/navbar2.css') }}">
-        {% block content %}
-        {% endblock content %}    
-        <!--
-        {% block upload_button %}
-        <head role="main" class="container">
-            <div class="row">
-            <div class="col-0">            
-            </div>
-            <div class="col-sm-3.0">
-                <div class="content-section">
-                <h4>Upload dataset</h4> 
-                <p class='text-muted'>
-                    <form action="/action_page.php">
-                        <input type="file" id="myFile" name="filename">
-                        <input type="submit">
-                    </form>
-                </p>
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+        {% block mainnavbar %}
+        <div class="container">
+            <div class="navigation bar">
+                <div class="site-header">
+                    <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
+
+                        <div class="container">
+                            <div class="collapse navbar-collapse" id="navbarToggle">
+                                <div class="navbar-nav mr-auto">
+
+                                    <a href="/home">Home</a>
+                                    <a href="/about">About</a>
+                                    <div class="dropdown">
+                                        <button class="dropbtn">Visualisations 
+                                            <i class="fa fa-caret-down"></i>
+                                        </button>
+
+                                        <div class="dropdown-content">
+                                            <a href="bar" class="nav-link">Bar Chart</a>
+                                            <a href="scatter" class="nav-link">Scatter Plot</a>
+                                            <a href="heatmap" class="nav-link">Heatmap</a>
+                                            <a href="gazeplot" class="nav-link">Gaze Strip Plot</a>
+                                        </div>          
+                                    </div>
+                                    <div class="navbar-logo" href="#"><img style=" width: 200px;" src="/static/images/navbar_logo2.jpg" alt="Logo"></div>            
+                                </div>                        
+                            </div>        
+                        </div>
+                    </nav>  
                 </div>
             </div>
-            </div>
-        </head>
-        {% endblock upload_button %}
-        -->    
-        <!-- Optional JavaScript -->
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        </div>
+        {% endblock mainnavbar %}
+        <div class="content">
+            {% block homepagelogo %}
+            {% endblock homepagelogo %}
+        </div>   
+        <div class="image_slider">
+            {% block imageslider %}
+
+            {% endblock imageslider %}
+        </div>
     </body>
 </html> 
