--- a/templates/heatmap.html
+++ b/templates/heatmap.html
@@ -1,10 +1,32 @@
-{% extends "vis.html" %}
-{% block content %}
+{% extends "base.html" %}
+{% block homepagelogo %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
+
+        <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
+        <link
+          href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap"
+          rel="stylesheet"
+        />
+        <style>
+            .chart{
+                display: block;
+                margin-left: 300px;
+                margin-right: 300px;
+                margin-top: 15px;
+                text-align: center;
+            }
+        </style>
     </head>
     <body>
+        <div class="chart" id="heatmap">
+            <script>
+                var graphs = {{ plot | safe }};
+                Plotly.plot('heatmap',graphs,{});
+            </script>
+        </div>
     </body>
 </html>
-{% endblock content %}
+{% endblock homepagelogo %}
