Bar Chart with dataset updating function
The selection for all datasets still need to be done, but this gives a general idea of what everything will look like. Message me as soon as possible if I can edit the visualisation code on the actual website so that it works for all visualisations!!!!

--- a/templates/about.html
+++ b/templates/about.html
@@ -99,10 +99,16 @@
         <title>Bokeh Scatter Plots</title>
     </head>
     <body>
-        <div> 
-          {{ div | safe}}
-          <script>{{script|safe}}</script>
-        </div>
+    <h1>
+      <form action="#" method="POST" enctype="multipart/form-data">
+        <input type="file" name="FileSelect" id="FileSelect" value="All_fixation_data_cleaned_up">
+        <button type="submit">Select</button>
+      </form>
+    </h1>
+    <div>
+
+    </div>
+
     </body>
 </html>
 
