fixed image slider

--- a/templates/home.html
+++ b/templates/home.html
@@ -44,12 +44,12 @@
   <button  id="nextBtn" class="prew fa fa-chevron-right"> 
   </button>
   <div class="carousel-slide">
-    <img src="/static/images/imageslider/heatmap.jpeg" id="lastClone" alt="">
+    <img src="/static/images/imageslider/barchart.jpeg" id="lastClone" alt="">
+    <img src="/static/images/imageslider/barchart.jpeg" alt="">
+    <img src="/static/images/imageslider/scatterplot.jpeg" alt="">
+    <img src="/static/images/imageslider/gazeplot.jpeg" alt="">
     <img src="/static/images/imageslider/heatmap.jpeg" alt="">
-    <img src="/static/images/imageslider/heatmap.jpeg" alt="">
-    <img src="/static/images/demoplot.jpeg" alt="">
-    <img src="/static/images/demoplot.jpeg" alt="">
-    <img src="/static/images/demoplot.jpeg" id="firstClone" alt="">
+    <img src="/static/images/imageslider/barchart.jpeg" id="firstClone" alt="">
   </div>
 </div>
 
